# huffman-cpp

./: CMakeLists.txt
huffman_archiver/: huffman.cpp  huffman.h
huffman_testing/: huffman_testing.cpp
huffman_util/: console_util.cpp
